external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/missing_match_untyped.exp
error[E03009]: unbound variable
  ┌─ tests/move_2024/ide_mode/missing_match_untyped.move:3:16
  │
3 │         match (e) {
  │                ^ Unbound variable 'e'

error[E04036]: non-exhaustive pattern
  ┌─ tests/move_2024/ide_mode/missing_match_untyped.move:3:16
  │
3 │         match (e) {
  │                ^ Pattern '_' not covered

error[E03009]: unbound variable
  ┌─ tests/move_2024/ide_mode/missing_match_untyped.move:8:16
  │
8 │         match (e) {
  │                ^ Unbound variable 'e'

error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/ide_mode/missing_match_untyped.move:9:13
  │
9 │             E::Two(n) => n
  │             ^ Could not resolve the name 'E'

error[E03009]: unbound variable
  ┌─ tests/move_2024/ide_mode/missing_match_untyped.move:9:26
  │
9 │             E::Two(n) => n
  │                          ^ Unbound variable 'n'

