external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/missing_match_untyped.move
#[allow(ide_path_autocomplete,ide_dot_autocomplete)]
module 0x42::m {
    public fun t0(): u64 {
        match (e) {
        }
    }

    public fun t1(): u64 {
        match (e) {
            E::Two(n) => n
        }
    }
}
